Support in codio (#1)
* issue #codio-15584. support in codio.

* add debug build, load empty file.

* save file

* rename, fixes

* disable rename

* open default empty file if empty content

* new diagrams do not change name

* copy docker files. disable menu items

* build docker

* bump codeql action v3

* bump codeql action v3

* bump actions to not use node16

* action set slack webhook url

* do not schedule codeql

* do not use debug in builded

* return default port

* cut menus

* disable save as for codio

* reload file on new for codio file.

* remove menu link and menu open in new window for pages

* set default export pdf as printer

* rename file. remove unused logs. unsubscribe.

* autosave and has changes subscribe

* remove unused

* action codeql for java always failed. remove it.

* remove unused, code style

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,6 +16,7 @@
 	<meta name="msapplication-config" content="images/browserconfig.xml">
     <meta name="mobile-web-app-capable" content="yes">
 	<meta name="theme-color" content="#d89000">
+	<script src="https://codio.com/ext/iframe/base/static/codio-client.js?1"></script>
 	<script id="geBootstrap" type="text/javascript">
 		/**
 		 * URL Parameters and protocol description are here:
